--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -25,6 +25,7 @@ body {
   font-family: "Roboto", serif;
   font-weight: 700 !important;
   padding-top: 10px;
+  padding: 0.5em;
 }
 
 .nav-content .logo-touch-target {
@@ -91,40 +92,42 @@ li a:hover {
   color: white;
 }
 
-.profile {
-  background-color: #1d539f !important;
-  text-align: center;
-  height: 320px;
-  margin-bottom: 50px;
-  align-items: center;
-  justify-content: center;
-}
-
 .profile-line {
   display: flex;
   height: 320px;
   width: 300px;
 }
 
-.profile h1 {
-  font-size: 50px;
-  font-weight: 700;
+.home-body {
+  margin-top: 0;
+  height: 100vh;
+}
+
+.container-fluid {
+  height: 100vh;
+}
+
+.background-image {
+  width: 100%;
+}
+
+.background-pic {
+  width: 100%;
+  max-height: 50%;
+}
+
+.text-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 1;
+}
+
+h1.text {
+  font-size: 80px;
   color: white;
-}
-
-.profile img {
-  border-radius: 90%;
-  max-height: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px;
-  align-items: center;
-  justify-content: center;
-}
-
-.profile .profile-picture {
-  margin-bottom: 30px;
-  height: 200px;
 }
 
 .banner {
