--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,27 +1,32 @@
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+$(document).ready(function() {
+  $(".scroll-down-btn").click(function(e) {
+    e.preventDefault();
+    $("html, body").animate({ scrollTop: $("#bottom").offset().top }, "slow");
+  });
+});
+</script>
+
+
 <header class="nav-bar">
-    <div class="nav-content">
-      <div class="nav-collect">
-        <div class="nav-logo">
-          <a href="/"><img src="{{url_for('static',filename='img/logo.svg')}}" /></a>
-        </div>
-      </div>
-      <div class="nav-items">
-        <li><a href="/">Home</a></li>
-        <li><a href="/education">Education</a></li>
-        <li><a href="/work">Work Experience</a></li>
-        <li><a href="/hobbies">Hobbies</a></li>
-        <li><a href="/map">Map</a></li>
-      </div>
-        </div>
+  <div class="nav-content">
+    <div class="nav-collect"></div>
+    <div class="nav-items">
+      <li><a href="/">Home</a></li>
+      <li><a href="/education">Education</a></li>
+      <li><a href="/work">Work Experience</a></li>
+      <li><a href="/hobbies">Hobbies</a></li>
+      <li><a href="/map">Map</a></li>
     </div>
+  </div>
 </header>
 
-  <div class="profile">
-    <div id="profile-picture" class="profile-picture md:pt-5 pt-24 md:pr-32 pr-44 nav-center">
-      <div class="profile-line">
-        <img src="{{url_for('static',filename='img/priya.jpg')}}" />
-        <img src="{{url_for('static',filename='img/joel.jpg')}}" />
+  <div class="background-image">
+    <div class="text-overlay">
+      <h1 class="text">{{ title }}</h1>
     </div>
+      <img class="background-pic" src="{{url_for('static',filename='img/nature.jpg')}}" />
   </div>
-    <h1>{{ title }}</h1>
-  </div>
+  
+</div>
