--- a/templates/template.html
+++ b/templates/template.html
@@ -24,7 +24,7 @@
     />
     <link
       rel="icon"
-      href="{{url_for('static',filename='img/mlh.ico')}}"
+      href="{{url_for('static',filename='img/portfolio-icon.ico')}}"
       type="image/x-icon"
     />
     <link
@@ -33,8 +33,8 @@
       integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
       crossorigin=""
     />
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  
 
     <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script
@@ -68,6 +68,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
     <link
       lang="sass"
       rel="stylesheet"
@@ -75,7 +76,7 @@
     />
     <link
       rel="icon"
-      href="{{url_for('static',filename='img/mlh.ico')}}"
+      href="{{url_for('static',filename='img/portfolio-icon.ico')}}"
       type="image/x-icon"
     />
 
