run_test edit for VPS

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -219,10 +219,22 @@ h1.text {
 
 /* Work Experience */
 
+.btn-work {
+  font-size: 25px;
+}
+
+.btn-work:hover {
+  color: #1d539f;
+}
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.accordian .card-header {
+  background-color: white;
 }
 
 .card {
