redeploy change and test edit

--- a/templates/education.html
+++ b/templates/education.html
@@ -5,7 +5,7 @@
   <div class="card">
     <h3>Priya: Current Education</h3>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.
+      University of Washington - B.S. Informatics
     </p>
   </div>
   <div class="card">
