--- a/templates/education.html
+++ b/templates/education.html
@@ -10,7 +10,7 @@
   </div>
   <div class="card">
     <h3>Priya: Previous Education</h3>
-    <p>Doloremque commodi unde eaque! Et natus dolorum corrupti ut numquam.</p>
+    <p>Homestead High School: 2016-2020</p>
   </div>
 </div>
 
