--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -5,7 +5,7 @@
 <h1 class="row hobby-title">Priya's Hobbies</h1>
 
 <div class="card-container">
-    <div class="card">
+    <div class="card grow">
       <h3 class="mb-4">Reading</h3>
       <img src="static\img\book.jpg" class="rounded-md" alt="book">
       <p class="mt-3">
