--- a/templates/work.html
+++ b/templates/work.html
@@ -6,7 +6,7 @@
       <h5 class="mb-0">
         <button class="btn btn-work font-weight-bold" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
           aria-controls="collapseOne">
-          Work Experience #1
+          MLH Production Engineering Fellow
         </button>
       </h5>
     </div>
