--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,9 +16,9 @@
 
 {% if request.path == '/' %}
 <div class="background-image">
-  <!-- <div class="text-overlay">
-    <h1 class="text">{{ title }}</h1>
-  </div> -->
+  <div class="text-overlay ml-4">
+    <h1 class="text">Priya's Portfolio</h1>
+  </div>
   <img class="background-pic" src="{{ url_for('static', filename='img/nature.jpg') }}" />
 </div>
 {% endif %}
