--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -11,6 +11,7 @@ button {
 
 body {
   background-color: #f5f5f9;
+  /* background-color: #F9F6F0; */
   background-size: cover;
   width: auto;
   overflow-x: hidden;
@@ -22,6 +23,7 @@ body {
   width: 100%;
   display: inline-block;
   background-color: #1c539f;
+  /* background-color: #C4AE78; */
   font-family: "Roboto", serif;
   font-weight: 700 !important;
   padding-top: 10px;
