--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
           <a href="https://www.linkedin.com/in/priya-hariharan-2834271b7/" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-linkedin mr-2"></i>
           </a>
-          <a href="https://github.com/phariha/" target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/phariharan818?tab=overview&from=2023-07-01&to=2023-07-31/" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-github mr-2"></i>
           </a>
           <a href="https://drive.google.com/file/d/1_Iqg5rL5iGclxlzvS-MrRnfGXOStK_qt/view?usp=sharing" target="_blank" rel="noopener noreferrer">
