--- a/templates/work.html
+++ b/templates/work.html
@@ -62,6 +62,7 @@
       </div>
     </div>
   </div>
+  <!-- <img src="{{ url_for('static', filename='img/priya-resume.png') }}" alt="My Resume"> -->
 </div>
 
 {% endblock %}
