--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -14,7 +14,7 @@
     </div>
     <div class="card">
       <h3 class="mb-4">Playing Video Games</h3>
-      <img src="static\img\rdr2.jpg" class="rounded-md" alt="rdr2">
+      <img src="https://cdn.akamai.steamstatic.com/steam/apps/1174180/header.jpg?t=1656615305" class="rounded-md" alt="rdr2">
       <p class="mt-3">Doloremque commodi unde eaque! Et natus dolorum corrupti ut numquam.</p>
     </div>
     <div class="card">
