--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
     <div class="nav-collect"></div>
     <div class="nav-items">
       <li><a href="/">Home</a></li>
-      <li><a href="/education">Education</a></li>
+      <li><a href="/project">Projects</a></li>
       <li><a href="/work">Work Experience</a></li>
       <li><a href="/hobbies">Hobbies</a></li>
       <li><a href="/map">Map</a></li>
