--- a/templates/project-details.html
+++ b/templates/project-details.html
@@ -8,11 +8,11 @@
         <img src="{{ url_for('static', filename=image_url) }}" class="slideshow-image img-fluid rounded mb-3"
             alt="Project Image">
         {% endfor %}
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev" onclick="plusSlides(-1)"style="color: white;">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)" style="color: white;">&#10095;</a>
     </div>
     <div class="card mt-4 mb-4">
-        <h4 class="text-center">{{ project.title }}</h4>
+        <h4 class="text-center"><strong>{{ project.title }}</strong></h4>
         <p>{{ project.description | markdown | safe }}</p>
     </div>
     <div class="container">
@@ -46,7 +46,7 @@
         {% endif %}
     </div>
     <div class="card mt-4 mb-4">
-        <h4 class="text-center">{{ project.fd_title }}</h4>
+        <h4 class="text-center"><strong>{{ project.fd_title }}</strong></h4>
         <p>{{ project.fd_description | markdown | safe }}</p>
     </div>
     <div class="container">
@@ -69,7 +69,7 @@
         {% endif %}
     </div>
     <div class="card mt-4 mb-4">
-        <h4 class="text-center">{{ project.code_title }}</h4>
+        <h4 class="text-center mb-4"><strong>{{ project.code_title }}</strong></h4>
         <p>{{ project.code_description }} </p>
         <p>{{ project.github_description }}<a href="{{ project.code_link }}" class="text-center" target="_blank">Project
                 Link</a></p>
@@ -117,6 +117,10 @@
             </div>
         </div>
     </div>
+</div>
+<div class="navigation-buttons">
+    <a href="{{ url_for('project_details', project_id=project_id - 1) }}" class="btn btn-secondary mr-2">Previous Project</a>
+    <a href="{{ url_for('project_details', project_id=project_id + 1) }}" class="btn btn-secondary">Next Project</a>
 </div>
 
 <script>
