--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,25 +1,19 @@
-<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
 
 <header class="nav-bar">
-    <div class="nav-content">
-      <div class="nav-collect"></div>
-      <div class="nav-items">
-        <li><a href="/">Home</a></li>
-        <li><a href="/project">Projects</a></li>
-        <li><a href="/work">Work Experience</a></li>
-        <li><a href="/hobbies">Hobbies</a></li>
-        <li><a href="/map">Map</a></li>
-        <li><a href="/timeline">Timeline</a></li>
-      </div>
+  <div class="nav-content">
+    <div class="nav-collect"></div>
+    <div class="nav-items navbar-nav-scroll">
+      <li><a href="/">Home</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#work">Work Experience</a></li>
+      <li><a href="#hobby">Hobbies</a></li>
+      <li><a href="#map-stuff">Map</a></li>
+      <li><a href="#contact">Contact</a></li>
     </div>
-  </header>
-
-  <!-- {% if request.path == '/' %}
-  <div class="background-image">
-    <div class="background-overlay"></div>
-    <div class="text-overlay ml-4">
-      <h1 class="text" id="portfolio-heading">Priya's Portfolio</h1>
-    </div>
-    <img class="background-pic" src="{{ url_for('static', filename='img/nature.jpg') }}" />
   </div>
-  {% endif %} -->
+</header>
+
+
+
+
+
