--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h2 class="timeline-heading text-center mt-5"><strong>Timeline Posts</strong></h2>
-<p class="timeline-p text-center">Posts will appear here as you add them!</p>
+<!-- <h2 class="timeline-heading text-center mt-5"><strong>Timeline Posts</strong></h2> -->
+<p class="timeline-p text-center text-wrap">Feel free to ask post your questions here!</p>
 <div class="row mt-5 ml-3 mr-3">
     <div class="col-sm-6">
         <div class="card">
