--- a/templates/work.html
+++ b/templates/work.html
@@ -1,6 +1,6 @@
 {% extends "template.html" %} {% block content %}
 
-<div id="accordion">
+<div id="accordion work">
   <div class="card card-work mt-4 ml-5 mr-5">
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
