--- a/templates/template.html
+++ b/templates/template.html
@@ -15,7 +15,7 @@
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-  <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
+  <!-- <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}"> -->
   <link rel="icon" href="{{url_for('static',filename='img/portfolio-icon.ico')}}" type="image/x-icon">
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
